add font and spacing

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Cinnabon Cinnamon Buns</h1>
+    <h1>Cinnabon Cinnamon Rolls</h1>
     <p>Cinnamon buns are delicious.<br>
         Everybody deserves one for breakfast.
     </p>
