--- a/index.html
+++ b/index.html
@@ -8,9 +8,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Cinnabon Cinnamon Rolls</h1>
-    <p>Cinnamon buns are delicious.<br>
-        Everybody deserves one for breakfast.
+    <img src="https://i.ebayimg.com/images/g/hOIAAOSwIYtdDT5Y/s-l1600.jpg" alt="Dog with cinnamon rolls for ears" height="300" width="400">
+    <h1>Cinnamon's Cinnamon Rolls</h1>
+
+    <p><Cinnamon rolls are delicious.<br>
+        Everybody deserves one for breakfast..<strong><big>including your dog</big></strong>.
     </p>
+
+    <h2> Cinnamon's Cinnamon Rolls are made with 100% love and real ingredients that your pup will love. 
+<ul>
+    <li>Egg</li>
+    <li>Chicken Stock</li>
+    <li>Honey</li>
+    <li>Cinnamon</li>
+</ul>
+    </h2>
 </body>
 </html>
